--- a/02_calculator(no button)/calculator.html
+++ b/02_calculator(no button)/calculator.html
@@ -17,6 +17,9 @@
   </head>
 
   <body>
+     <div class="black">
+        <button id="btn99" class="btn" type="button" onclick="history.back()">black</button>
+    </div>
     <header>
       <h1>Calculator</h1>
     </header>
@@ -65,3 +68,4 @@
     <script src="js/calculator.js"></script>
   </body>
 </html>
+
