--- a/02_calculator/calculator.html
+++ b/02_calculator/calculator.html
@@ -20,6 +20,9 @@
 </head>
 
 <body>
+   <div class="black">
+        <button id="btn99" class="btn" type="button" onclick="history.back()">black</button>
+    </div>
   <header>
     <h1>Calculator</h1>
   </header>
@@ -68,5 +71,6 @@
 
   <script src="js/calculator.js"></script>
 </body>
+
 
 </html>
