--- a/02_calculator(no button)/calculator.html
+++ b/02_calculator(no button)/calculator.html
@@ -17,8 +17,8 @@
   </head>
 
   <body>
-     <div class="black">
-        <button id="btn99" class="btn" type="button" onclick="history.back()">black</button>
+     <div class="back">
+      <button id="btn99" type="button" onclick="history.back()">back</button>
     </div>
     <header>
       <h1>Calculator</h1>
@@ -68,4 +68,5 @@
     <script src="js/calculator.js"></script>
   </body>
 </html>
+
 
