--- a/02_calculator/calculator.html
+++ b/02_calculator/calculator.html
@@ -20,8 +20,8 @@
 </head>
 
 <body>
-   <div class="black">
-        <button id="btn99" class="btn" type="button" onclick="history.back()">black</button>
+   <div class="back">
+      <button id="btn99" type="button" onclick="history.back()">back</button>
     </div>
   <header>
     <h1>Calculator</h1>
@@ -74,3 +74,4 @@
 
 
 </html>
+
