--- a/10a_omikuji/omikuji.html
+++ b/10a_omikuji/omikuji.html
@@ -10,6 +10,9 @@
 </head>
 
 <body>
+  <div class="back">
+      <button id="btn99" type="button" onclick="history.back()">back</button>
+    </div>
   <div class="shutter opening"></div>
   <header>今日のあなたの運勢</header>
   <div class="wrapper" title="大吉だといいね～">
@@ -29,5 +32,6 @@
   <script src="assets/jquery.textillate.js"></script>
   <script src="js/omikuji.js"></script>
 </body>
+
 
 </html>
