--- a/05-06_tic_tac_toe/tic_tac_toe.html
+++ b/05-06_tic_tac_toe/tic_tac_toe.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <div class="black">
+    <div class="back">
         <button id="btn99" class="btn" type="button" onclick="history.back()">black</button>
     </div>
 
@@ -49,5 +49,6 @@
             <script type="text/javascript" src="js/snowfall.jquery.min.js"></script>
             <script src="js/tic_tac_toe.js"></script>
 </body>
+
 
 </html>
