--- a/05-06_tic_tac_toe/tic_tac_toe.html
+++ b/05-06_tic_tac_toe/tic_tac_toe.html
@@ -13,7 +13,7 @@
 
 <body>
     <div class="back">
-        <button id="btn99" class="btn" type="button" onclick="history.back()">black</button>
+        <button id="btn99" class="btn" type="button" onclick="history.back()">back</button>
     </div>
 
     <div class="wrapper">
@@ -52,3 +52,4 @@
 
 
 </html>
+
